--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 		<meta name="web_author" content="Chris Taylor"/>
 
 		<script type="text/javascript" src="js/modernizr.js"></script>
-		<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'/>
+		<link href='//fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'/>
 		<link rel="stylesheet" media="all" type="text/css" href="css/main.css" />
 		<link rel="icon" type="image/ico" href="favicon.ico"/>
       	
